# clearlist-app

./: .gitignore  .prettierrc  App.tsx  README.md  app.config.ts  app.json  eas.json  eslint.config.js  index.js  metro.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
.github/workflows/: deploy-backend.yml  deploy.yml
app-old/: +not-found.tsx  _layout.tsx  index.tsx
app-old/(pages)/: deadline.tsx  inbox.tsx  logbook.tsx  today.tsx  trash.tsx  upcoming.tsx
backend/: .env.example  .gitignore  Cargo.toml  README.md  schema.down.sql  schema.up.sql  test_data.sql
backend/src/: data.rs  db.rs  error.rs  macros.rs  main.rs  model.rs  models.rs  response.rs  route.rs  routes.rs  util.rs
backend/src/handler/: area.rs  auth.rs  project.rs  tag.rs  task.rs
backend/src/model/: area.rs  auth.rs  project.rs  tag.rs  task.rs
backend/src/models/: area.rs  auth.rs  jwt.rs  project.rs  tag.rs  task.rs  user.rs
backend/src/models/auth/: token.rs  user.rs
backend/src/models/project/: tag.rs
backend/src/models/task/: tag.rs
backend/src/routes/: area.rs  auth.rs  project.rs  tag.rs  task.rs  user.rs
backend/src/routes/project/: tag.rs
backend/src/routes/task/: tag.rs
backend/src/schema/: area.rs  auth.rs  project.rs  tag.rs  task.rs
backend/src/util/: auth.rs  sql_builder.rs
components/: Content.tsx  NavButton.tsx
components/sidebar/: Sidebar.tsx
frontend/: .gitignore  app.config.js  app.config.mts  app.config.ts  babel.config.js  eslint.config.mjs  google-services.json.example  index.web.js  metro.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
frontend/src/: App.tsx  App.web.tsx  Navigation.tsx  Splash.tsx
frontend/src/alf/: fonts.ts  index.tsx  themes.ts  tokens.ts
frontend/src/components/: Button.tsx  README.md  detection.ts
frontend/src/hooks/: useStorage.ts
frontend/src/screens/: AreaScreen.tsx  CalendarScreen.tsx  DebugScreen.tsx  ListScreen.tsx  LoginScreen.tsx  NotFound.tsx  ProjectScreen.tsx  SearchScreen.tsx  SettingScreen.tsx  TodoScreen.tsx
frontend/src/services/: README.md  api.ts  apiClient.ts  utils.ts
frontend/src/storage/: index.ts  schema.ts  schemas.ts
frontend/src/types/: font.ts  request.ts  response.ts  routes.ts  theme.ts
frontend/src/util/: platformDetect.ts  (+1 more)
models/: Area.ts  Project.ts  Tag.ts  Task.ts
screens/: login.tsx
src/: Splash.tsx  constants.ts
src/alf/: README.md  atoms.ts  fonts.ts  tokens.ts  types.ts
src/app/: _layout.tsx  index.tsx  settings.tsx
src/components/: Button.tsx  README.md  add-task-modal.tsx  base-button.tsx  layout.tsx  sidebar.tsx  task-component.tsx  task-item.tsx
src/context/: AuthContext.tsx  auth-context.tsx  types.ts
src/hooks/: use-persisted.ts  use-theme.ts
src/lib/: auth-client.ts
src/screens/: AreaScreen.tsx  ListScreen.tsx  LoginScreen.tsx  NotFound.tsx  list-screen.tsx  lists-screen.tsx  log-in-screen.tsx
src/services/: README.md  api.ts  apiClient.ts  consts.ts  index.ts  schemas.ts  types.ts  utils.ts
src/storage/: README.md  schemas.ts
src/types/: index.ts  request.ts  resource.ts  routes.ts
src/util/: isSessionExpired.ts
todo-api/: .gitignore  Cargo.toml  reset.sql  schema.down.sql  schema.sql  schema.up.sql  test_data.sql
todo-api/src/: data.rs  database.rs  error.rs  handler.rs  main.rs  model.rs  models.rs  request.rs  response.rs  route.rs  routes.rs  schema.rs  storage.rs  util.rs
todo-api/src/data/: area.rs  project.rs  tag.rs  task.rs
todo-api/src/database/: model.rs
todo-api/src/handler/: area.rs  auth.rs  project.rs  tag.rs  task.rs
todo-api/src/model/: area.rs  auth.rs  project.rs  tag.rs  task.rs
todo-api/src/models/: db.rs  request.rs
todo-api/src/models/db/: area.rs  project.rs  task.rs
todo-api/src/models/request/: area.rs  project.rs  tag.rs  task.rs
todo-api/src/request/: area.rs  project.rs  tag.rs  task.rs
todo-api/src/routes/: handler.rs  model.rs  utils.rs
todo-api/src/routes/handler/: area.rs  project.rs  tag.rs  task.rs
todo-api/src/routes/model/: area.rs  project.rs  tag.rs  task.rs
todo-api/src/schema/: area.rs  auth.rs  project.rs  tag.rs  task.rs
todo-api/src/storage/: db.rs  model.rs
todo-api/src/storage/model/: project.rs  tag.rs  task.rs
todo-api/src/util/: sql_builder.rs
todo-api/tests/: task_api_test.rs
todo-web/: .gitignore  package-lock.json  package.json  server.js
todo-web/templates/: 404.pug  layout.pug
(+81 files in other folders)
