[package]
name = "todo-api"
version = "0.0.1"
edition = "2024"
default-run = "todo-api"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-jwt-auth = "0.5.1"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
governor = "^0.8.1"
jsonwebtoken = "9.3.1"
password-hash = { version = "0.5.0", features = ["getrandom", "rand_core"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tower_governor = { version = "0.7.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
