[package]
name = "todo-api"
version = "0.0.1"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tower = "0.5.2"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
